internal/xds/translator/testdata/out/xds-ir/merge-backends-merge-gateways-different-btp.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - gateway-1.example.com
    name: first-listener/gateway-1_example_com
    routes:
    - match:
        prefix: /
      name: httproute/default/http-route-1/rule/0/match/0/*
      route:
        cluster: backend/service/default/service-1/8080/http/envoy-gateway/gateway-1
        upgradeConfigs:
        - upgradeType: websocket
  - domains:
    - gateway-2.example.com
    name: second-listener/gateway-2_example_com
    routes:
    - match:
        prefix: /
      name: httproute/default/http-route-2/rule/0/match/0/*
      route:
        cluster: backend/service/default/service-1/8080/http/envoy-gateway/gateway-2
        upgradeConfigs:
        - upgradeType: websocket
